# web-crawler

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
.claude/: settings.local.json
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/test/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
tasks/crawler/: main.ts  task.oo.yaml
tasks/search/: main.ts  task.oo.yaml
tasks/search-online/: __init__.ts  task.oo.yaml
